# cascad_oc

./: README.md  pyproject.toml
example/: block_connect.ipynb  new_arch.ipynb  plot_mesh.ipynb
experiments/2024_CAP/: Untitled.ipynb
src/cascadoc/: __init__.py
src/cascadoc/blocks/: __init__.py  base_block.py
src/cascadoc/blocks/concentrated_blocks/: __init__.py  base_concentrated_block.py  function_block.py  function_helpers.py  ode_block.py  ode_helpers.py
src/cascadoc/blocks/distributed_blocks/: __init__.py  base_distributed_block.py  hyp_block.py  hyperbolic_block.py
src/cascadoc/core/: __init__.py  connection.py
src/cascadoc/visualization/: mesh_visualizer.py
src/cascadoc_deepseek/: sam.py
src/cascadoc_deepseek/blocks/: __init__.py  base_block.py
src/cascadoc_deepseek/blocks/concentrated_blocks/: __init__.py  base_concentrated_block.py  function_block.py  function_helpers.py  ode_block.py
src/cascadoc_deepseek/blocks/distributed_blocks/: __init__.py  base_distributed_block.py  hyperbolic_block.py  hyperbolic_helpers.py
src/cascadoc_deepseek/core/: __init__.py
src/cascadoc_deepseek/visualization/: mesh_visualizer.py
src/cascadoc_old/: __init__.py  mesh.py  oc_solver.py  ploter.py
test/: test_hyp_mesh.py
tests/: run_tests.py  test_config.py
tests/concentrated_blocks/: test_function_block.py  test_ode_block.py
tests/distributed_blocks/: test_hyperbolic_block.py
tests/distributed_blocks/dtype/: test_characteristic.py  test_characteristic_mesh.py  test_discretization.py  test_rectangle.py
(+15 files in other folders)
